# aerial_manipulator_prev

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/ackermann_steering_controller/: .catkin  local_setup.sh  setup.sh
devel/.private/catkin_simple/: .catkin  local_setup.sh
devel/.private/catkin_tools_prebuild/: .catkin  local_setup.sh  setup.sh
devel/.private/diff_drive_controller/: .catkin  local_setup.sh  setup.sh
devel/.private/effort_controllers/: .catkin  local_setup.sh  setup.sh
devel/.private/eigen_catkin/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/eigen_checks/: .catkin  setup.sh
devel/.private/force_torque_sensor_controller/: .catkin  local_setup.sh  setup.sh
devel/.private/forward_command_controller/: .catkin
devel/.private/glog_catkin/: .catkin  local_setup.sh  setup.sh
devel/.private/gripper_action_controller/: .catkin  .rosinstall  setup.sh
devel/.private/imu_sensor_controller/: .catkin  .rosinstall  local_setup.sh
devel/.private/joint_state_controller/: .catkin  local_setup.sh  setup.sh
devel/.private/joint_state_publisher/: .catkin  local_setup.sh  setup.sh
devel/.private/joint_state_publisher_gui/: .catkin  .rosinstall  setup.sh
devel/.private/joint_trajectory_controller/: .catkin  local_setup.sh  setup.sh
devel/.private/mav_msgs/: .catkin  .rosinstall
devel/.private/mav_planning_msgs/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/mav_state_machine_msgs/: .catkin  .rosinstall
devel/.private/mav_system_msgs/: .catkin  local_setup.sh  setup.sh
devel/.private/mav_trajectory_generation/: .catkin  .rosinstall
devel/include/: nlopt.f  nlopt.h  nlopt.hpp
devel/lib/: libglog.la  libglog.so.0  libglog.so.0.0.0  libnlopt_cxx.la  libyaml-cpp0.5.so.0.5  libyaml-cpp0.5.so.0.5.3
logs/eigen_catkin/: build.make.000.log.stderr
logs/glog_catkin/: build.make.000.log.stderr
logs/mav_trajectory_generation/: build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.cmake.002.log.stderr  build.cmake.003.log.stderr
logs/mav_trajectory_generation_ros/: build.make.000.log.stderr
logs/mavlink/: build.make.000.log.stderr
logs/msg_check/: build.cmake.000.log.stderr
logs/nlopt/: build.make.000.log.stderr
logs/rotors_gazebo_plugins/: build.cmake.000.log.stderr  build.make.000.log.stderr
logs/rotors_hil_interface/: build.make.000.log.stderr
logs/rrc_control/: build.cmake.000.log.stderr
logs/serial_comm/: build.cmake.000.log.stderr
logs/yaml_cpp_catkin/: build.make.000.log.stderr
src/: .rosinstall  .rosinstall.bak
src/control/controller-master/: CMakeLists.txt  README.md  package.xml
src/control/controller-master/include/rrc_control/: asmc_position_controller.h  autde_position_controller.h  common.h  parameters.h  parameters_ros.h  pid_position_controller.h  reconfig_pid_controller.h  smc_position_controller.h
src/control/controller-master/launch/: hovering_example.launch  mav_hovering_example.launch
src/control/controller-master/resources/: asmc_pelican.yaml  autde_pelican.yaml  pelican.yaml  pid_controller_pelican.yaml  smc_pelican.yaml
src/control/controller-master/scripts/: 2016-02-11-23-13-02.bag  combined_.py  error_pd.txt  first_test.bag  graph.py  kill.bash  kill_com.py  myfile.txt  odom_pd.txt  odom_traj.py  plot_data.py  plot_sub.py  run_rotors.bash  subs.py  tag_to_odom.py  test.py  traj_pd.txt  velocity_publisher.py
src/control/controller-master/scripts/point_track/: error_asmc.txt  error_asmc_0.8.txt  error_pd.txt  error_smc.txt  error_smc_0.3.txt  odom_asmc.txt  odom_asmc_0.8.txt  odom_pd.txt  odom_smc.txt  odom_smc_0.3.txt  plots.py  traj_smc_0.3.txt
src/control/controller-master/scripts/point_track_feb29/: error_asmc.txt  error_pd.txt  error_pid.txt  error_smc.txt  odom_asmc.txt  odom_pd.txt  odom_pid.txt  odom_smc.txt  plot_odom.py  plot_sub.py  plots.py  traj_pd.txt  traj_pid.txt
src/control/controller-master/scripts/test/: plot_sub.py
src/control/controller-master/scripts/test/comparisons/: odom_asmc.txt  odom_asmc0.txt  odom_asmc1.txt  odom_asmc_500.txt  odom_pid.txt  odom_smc.txt  odom_smc_hi.txt  odom_smc_lo.txt  traj_asmc.txt  traj_asmc0.txt  traj_asmc1.txt  traj_asmc_500.txt  traj_smc.txt  traj_smc_hi.txt  traj_smc_lo.txt
src/control/controller-master/scripts/test/dummy/: odom.txt  odom_smc.txt  odom_smc1.txt  odom_smc2.txt  odom_smc3.txt  traj.txt  traj_smc.txt  traj_smc1.txt  traj_smc2.txt  traj_smc3.txt
src/control/controller-master/scripts/test/obs/: odom_asmc.txt  odom_pd.txt  odom_pid.txt  odom_pid_.txt  odom_smc.txt  traj_asmc.txt  traj_pd.txt  traj_pid.txt  traj_pid_.txt  traj_smc.txt
src/control/controller-master/scripts/test/obs/200/: odom_asmc.txt  odom_pid.txt  odom_smc.txt  traj_pid.txt
src/control/controller-master/scripts/test/point_track/: odom_asmc.txt  odom_pd.txt  odom_pid.txt  odom_smc.txt  traj_asmc.txt  traj_pd.txt  traj_pid.txt  traj_smc.txt
src/control/controller-master/scripts/traj/: error_asmc.txt  error_pd.txt  error_smc.txt  odom_asmc.txt  odom_pd.txt  odom_smc.txt  plots.py  traj_asmc.txt  traj_pd.txt  traj_smc.txt
src/control/controller-master/scripts/traj_feb29/: error_asmc.txt  error_pd.txt  error_smc.txt  odom_asmc.txt  odom_pd.txt  odom_smc.txt  plots.py  traj_asmc.txt  traj_pd.txt  traj_smc.txt
src/control/controller-master/src/nodes/: asmc_position_controller_node.cpp  asmc_position_controller_node.h  autde_position_controller_node.cpp  autde_position_controller_node.h  hovering_example.cpp  hovering_smooth.cpp  pid_position_controller_node.cpp  pid_position_controller_node.h  points_publisher.cpp  reconfig_pid_controller_node.cpp  reconfig_pid_controller_node.h  smc_position_controller_node.cpp  smc_position_controller_node.h  waypoint_publisher.cpp
src/control/dependency/serial_comm/: CMakeLists.txt
src/control/dependency/serial_comm/include/: serial_comm.h
src/control/dependency/serial_comm/src/nodes/: serial_comm_node.cpp
(+1228 files in other folders)
